# Constellate-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
ConstellateEngine/: CMakeLists.txt  ZERO_CHECK.vcxproj.filters
ConstellateEngine/src/: Constellate.h  cslpch.h
ConstellateEngine/src/Components/: Component.h  GraphicsComponent.h
ConstellateEngine/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
ConstellateEngine/src/Entity-Component/: Entity.h  EntityFactory.h  EntityManager.cpp  EntityManager.h  Transform.h
ConstellateEngine/src/Entity-Component/Components/: ColliderComponent.h  Component.h  GraphicsComponent.h  PhysicsComponent.h
ConstellateEngine/src/Entity-Component/Components/Colliders/: PlaneCollider.cpp  PlaneCollider.h  ShereCollider.cpp  ShpereCollider.h
ConstellateEngine/src/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseEvent.h
ConstellateEngine/src/Gui/: ImGuiLayer.cpp  ImGuiLayer.h
ConstellateEngine/src/Input/: InputManager.cpp  InputManager.h  KeyCodes.h
ConstellateEngine/src/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
ConstellateEngine/src/Physics/: CollisionDetection.cpp  CollisionDetection.h  CollisionPrimitives.h  PhysicManagers.h  PhysicsManager.cpp  PhysicsManager.h
ConstellateEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h
ConstellateEngine/src/Platform/Windows/: InputManagerWindows.cpp  InputManagerWindows.h  WindowWindow.cpp  WindowWindow.h
ConstellateEngine/src/Renderer/: Camera.cpp  Camera.h  IRenderer.h  OpenGLContext.cpp  OpenGLContext.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  RendererCommand.cpp  RendererCommand.h  RendererController.cpp  RendererController.h  RendererManager.cpp  RendererManager.h  RenderingContext.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h
ConstellateEngine/src/Renderer/Geometry/: RenderBuffer.cpp  RenderBuffer.h  VertexArray.cpp  VertexArray.h
ConstellateEngine/src/Renderer/Geometry/Layout/: BufferElement.h  BufferLayout.h
ConstellateEngine/src/Renderer/OpenGLRenderer/: OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
ConstellateEngine/src/Renderer/OpenGLRenderer/Geometry/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
ConstellateEngine/src/Resources/: AssetImporter.cpp  AssetImporter.h  ShaderLoader.h  TextureImporter.cpp  TextureImporter.h
Demo/: CMakeLists.txt  FirstPersonCamera.cpp  MyGUILayer.h  PlayerComponent.cpp  RotationComponent.cpp  RotationComponent.h  TargetComponent.cpp  TargetComponent.h  TargetHitEvent.h  main.cpp
Demo/Assets/: plane.mtl
Demo/Shaders/: shader1.frag  shader2.frag  shader2.vert
Game/: CMakeLists.txt  FirstPersonCamera.h  PlayerComponent.cpp  PlayerComponent.h  TargetComponent.cpp  TargetComponent.h  main.cpp
Game/Shaders/: shader1.frag  shader1.vert  shader2.frag  shader2.geom
src/: Test.cpp  Test.h
